added friends layout

--- a/src/app/navigation/friends/friends.component.html
+++ b/src/app/navigation/friends/friends.component.html
@@ -1,1 +1,24 @@
-<p>friends works!</p>
+<div id="friends" class="friends-wrapper">
+  <h2 class="friends-title">Friends</h2>
+  <div class="friends-search_wrapper">
+    <label for="finde-friend_form" class="friends-label">Search Friends</label>
+    <form id="finde-friend_form" class="friends-search">
+      <input        
+        type="text"
+        class="friends-input"
+        placeholder="Search Friends"
+      />
+      <button type="button" class="friends-search_btn">Search</button>
+    </form>
+  </div>
+  <h2 class="searched-friend">Search Friends: Swag</h2>
+  <ul class="friends-list">
+    <li class="friends-list_item">
+      Swag
+      <button type="button" class="friends-list_add-btn">Add Friend</button>
+    </li><li class="friends-list_item">
+      Swag
+      <button type="button" class="friends-list_add-btn">Add Friend</button>
+    </li>
+  </ul>
+</div>
