--- a/src/app/navigation/profile/profile.component.html
+++ b/src/app/navigation/profile/profile.component.html
@@ -1,18 +1,1 @@
-<div class="container">
-  <form [formGroup]="profileForm" (ngSubmit)="updateProfile()">
-    <h2>Profile</h2>
-    <div class="wrapper">
-      <label for="username">Username</label>
-      <input id="username" type="text" formControlName="username">
-    </div>
-    <div class="wrapper">
-      <label for="email">Email</label>
-      <input id="email" type="text" formControlName="email">
-    </div>
-    <div class="wrapper">
-      <label for="age">Age</label>
-      <input id="age" type="text" formControlName="age">
-    </div>
-    <button class="btn">Save</button>
-  </form>
-</div>
+<p>profile works!</p>
