--- a/src/app/navigation/friends/friends.component.scss
+++ b/src/app/navigation/friends/friends.component.scss
@@ -1,5 +1,10 @@
+$btn-prime: #6c69ff;
+$btn-prime-hov: #4d4adf;
+$btn-del: #FF6F6F;
+$btn-del-hov: #f75a5a;
+
 @mixin fonts($size: 14px, $height: 16px) {
-  font-family: "Roboto", sans-serif;
+  font-family: "Roboto";
   font-style: normal;
   font-weight: normal;
   font-size: $size;
@@ -64,7 +69,7 @@
       .friends-search_btn {
         height: 32px;
         padding: 8px 16px;
-        background: #6c69ff;
+        background: $btn-prime;
         border-radius: 4px;
         border: none;
         text-align: center;
@@ -104,10 +109,10 @@
       box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
       border-radius: 4px;
 
-      .friends-list_add-btn {
+      .friends-list_remove-btn {
         height: 32px;
         padding: 8px 16px;
-        background: #6c69ff;
+        background: $btn-del;
         border-radius: 4px;
         border: none;
         text-align: center;
@@ -117,7 +122,7 @@
         cursor: pointer;
 
         &:hover {
-          background: #4d4adf;
+          background: $btn-del-hov;
         }
       }
     }
