major commit before merge

--- a/src/app/navigation/friends/friends.component.html
+++ b/src/app/navigation/friends/friends.component.html
@@ -15,13 +15,13 @@
   <ul class="friends-list" *ngFor="let friend of usersFriends()">
     <li class="friends-list_item">
       {{ friend }}
-      <button
+      <!-- <button
         type="button"
         class="friends-list_remove-btn"
         (click)="onRemoveFriend(friend)"
       >
         Remove Friend
-      </button>
+      </button> -->
     </li>
   </ul>
 </ng-template>
@@ -30,13 +30,13 @@
   <ul class="friends-list" *ngFor="let friend of usersFriends()">
     <li class="friends-list_item">
       {{ friend }}
-      <button
+      <!-- <button
         type="button"
         class="friends-list_add-btn"
         (click)="onRemoveFriend(friend)"
       >
         Add Friend
-      </button>
+      </button> -->
     </li>
   </ul>
 </ng-template>
