added basic routing and configured navigation module

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,5 @@
   <app-navigation></app-navigation>
 </div>
 <div class="container">
-  <app-login></app-login>
+  <router-outlet></router-outlet>
 </div>
