--- a/src/app/navigation/login/login.component.scss
+++ b/src/app/navigation/login/login.component.scss
@@ -72,3 +72,9 @@ h2{
   color:red;
   font-weight: normal;
 }
+.notice{
+  margin-top: 50px;
+  font-size: 40px;
+  color:#6C69FF;
+  font-weight: normal;
+}
