--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,1 +1,13 @@
-<p>navigation works!</p>
+<nav>
+  <img src="../../assets/steam-icon.png" alt="can't open stem icon">
+  <p class="nav-element" routerLink="">Games</p>
+  <p class="nav-element" routerLink="/library">Library</p>
+  <p class="nav-element" routerLink="/friends">Friends</p>
+  <p class="nav-element" routerLink="/profile">Profile</p>
+  <div class="right" *ngIf="loggedIn;">
+    <p class="nav-element" routerLink="/login">Login</p>
+  </div>
+  <div class="right" *ngIf="!loggedIn;">
+    <p class="nav-element" routerLink="/login" (click)="logOut()">Logout</p>
+  </div>
+</nav>
