--- a/src/app/navigation/profile/profile.component.html
+++ b/src/app/navigation/profile/profile.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" *ngIf="user_id">
   <form [formGroup]="profileForm" (ngSubmit)="updateProfile()">
     <h2>Profile</h2>
     <div class="wrapper">
@@ -26,3 +26,7 @@
     Minimum age is 12!!!
   </p>
 </div>
+<p *ngIf="!user_id" class="notice">
+  You can't change you profile, because you didn't login.<br>
+  Please, login ! <3
+</p>
