add component games

--- a/src/app/navigation/games/games.component.html
+++ b/src/app/navigation/games/games.component.html
@@ -1,1 +1,5 @@
-<p>games works!</p>
+<div class="Games">
+  <h3 class="TitleGames">Games</h3>
+  <app-search></app-search>
+  <app-featured-game></app-featured-game>
+</div>
