--- a/src/app/navigation/friends/friends.component.scss
+++ b/src/app/navigation/friends/friends.component.scss
@@ -1,7 +1,51 @@
 $btn-prime: #6c69ff;
 $btn-prime-hov: #4d4adf;
-$btn-del: #FF6F6F;
+$btn-del: #ff6f6f;
 $btn-del-hov: #f75a5a;
+
+$breakpoints: (
+  "xs": 0,
+  "sm": 480px,
+  "md": 720px,
+  "lg": 960px,
+  "xl": 1200px,
+);
+
+@mixin xs {
+  @media (min-width: map-get($breakpoints, "xs")) {
+    @content;
+  }
+}
+
+@mixin sm {
+  @media (min-width: map-get($breakpoints, "sm")) {
+    @content;
+  }
+}
+
+@mixin md {
+  @media (min-width: map-get($breakpoints, "md")) {
+    @content;
+  }
+}
+
+@mixin lg {
+  @media (min-width: map-get($breakpoints, "lg")) {
+    @content;
+  }
+}
+
+@mixin xl {
+  @media (min-width: map-get($breakpoints, "xl")) {
+    @content;
+  }
+}
+
+@mixin breakpoint($bp: 0) {
+  @media (min-width: $bp) {
+    @content;
+  }
+}
 
 @mixin fonts($size: 14px, $height: 16px) {
   font-family: "Roboto";
@@ -17,15 +61,18 @@ $btn-del-hov: #f75a5a;
   align-items: center;
   padding: 20px 60px;
   position: absolute;
-  width: 1200px;
+  max-width: 1200px;
+  width: 100%;
   height: 780px;
   left: 120px;
   top: 120px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 4px;
+  background-color: #ffffff;
 
   .friends-title {
-    width: 1080px;
+    max-width: 1080px;
+    width: 100%;
     height: 28px;
     @include fonts(24px, 28px);
   }
@@ -33,7 +80,8 @@ $btn-del-hov: #f75a5a;
   .friends-search_wrapper {
     display: flex;
     flex-direction: column;
-    width: 1080px;
+    max-width: 1080px;
+    width: 100%;
     height: 50px;
     border-radius: 4px;
 
@@ -41,7 +89,8 @@ $btn-del-hov: #f75a5a;
       display: flex;
       flex-direction: column;
       align-items: flex-start;
-      width: 997px;
+      max-width: 997px;
+      width: 100%;
       height: 50px;
       margin-left: 0.4%;
       @include fonts;
@@ -52,7 +101,8 @@ $btn-del-hov: #f75a5a;
       column-gap: 10px;
 
       .friends-input {
-        width: 997px;
+        max-width: 997px;
+        width: 100%;
         height: 32px;
         padding: 8px;
         border: 0.5px solid #000000;
@@ -86,45 +136,91 @@ $btn-del-hov: #f75a5a;
   }
 
   .searched-friend {
-    width: 1080px;
+    max-width: 1080px;
+    width: 100%;
     height: 28px;
     @include fonts(24px, 28px);
   }
+  .user-list__wrapper {
+    max-height: 450px;
+    overflow-y: scroll;
 
-  .friends-list {
-    display: flex;
-    flex-direction: column;
-    row-gap: 20px;
-    padding-left: 0;
-    
-    .friends-list_item {
+    &::-webkit-scrollbar {
+      display: none;
+    }
+
+    .friends-list {
       display: flex;
-      align-items: center;
-      justify-content: space-between;
-      flex-direction: row;
-      box-sizing: border-box;
-      padding: 8px;
-      width: 1080px;
-      height: 48px;
-      box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-      border-radius: 4px;
+      flex-direction: column;
+      row-gap: 20px;
+      padding-left: 0;
+      max-width: 1080px;
+      width: 100%;
 
-      .friends-list_remove-btn {
-        height: 32px;
-        padding: 8px 16px;
-        background: $btn-del;
+      .friends-list_item {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        flex-direction: row;
+        box-sizing: border-box;
+        padding: 8px;
+        width: 1080px;
+        height: 48px;
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
         border-radius: 4px;
-        border: none;
-        text-align: center;
-        @include fonts;
-        color: #ffffff;
-        text-align: center;
-        cursor: pointer;
+        text-decoration: none;
 
-        &:hover {
-          background: $btn-del-hov;
+        .friends-list_add-btn,
+        .friends-list_remove-btn {
+          height: 32px;
+          padding: 8px 16px;
+          background: $btn-prime;
+          border-radius: 4px;
+          border: none;
+          text-align: center;
+          @include fonts;
+          color: #ffffff;
+          text-align: center;
+          cursor: pointer;
+
+          &:hover {
+            background: $btn-prime-hov;
+          }
+        }
+
+        .friends-list_remove-btn {
+          background: $btn-del;
+          &:hover {
+            background: $btn-del-hov;
+          }
+        }
+
+        @include xs {
+          width: 380px;
+        }
+
+        @include sm {
+          width: 500px;
+        }
+
+        @include md {
+          width: 780px;
+        }
+
+        @include lg {
+          width: 980px;
+        }
+
+        @include xl {
+          width: 1080px;
         }
       }
+    }
+
+    .friends-list_empty,
+    .users-list_empty {
+      text-align: center;
+      width: 100%;
     }
   }
 }
