--- a/src/app/navigation/games/featured-game/featured-game.component.scss
+++ b/src/app/navigation/games/featured-game/featured-game.component.scss
@@ -53,3 +53,11 @@
   width: 100%;
   height: 32px;
 }
+
+.GameContent > p{
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 5;
+  -webkit-box-orient: vertical;
+}
