--- a/src/app/navigation/games/search/search.component.html
+++ b/src/app/navigation/games/search/search.component.html
@@ -1,7 +1,7 @@
 <div class="SearchContainer">
   <label for="inputSearchGame">Search Games</label>
  <div class="SearchRowContainer">
-   <input id="inputSearchGame" type="text" placeholder="Search Games">
-   <button class="SearchBtn">Search</button>
+   <input id="inputSearchGame" type="text" placeholder="Search Games" [(ngModel)]="search">
+   <button class="SearchBtn" (click)="onSearch(search)">Search</button>
  </div>
 </div>
