--- a/src/app/navigation/games/featured-game/featured-game.component.html
+++ b/src/app/navigation/games/featured-game/featured-game.component.html
@@ -1,17 +1,16 @@
 <h3 class="FeaturedGamesTitle">Featured Games</h3>
-<!--<button (click)="Submit()"></button>-->
 <div class="FeaturedContentContainer">
   <div class="FeaturedGamesContainer">
     <div *ngFor="let game of getGames()">
       <div class="GameContainer" >
         <div class="GameHeader">
           <div class="GameHeaderContent">
-            <div>{{game.title}}</div>
+            <div>{{game.name}}</div>
             <div class="GamePrice">{{game.price}} UAH</div>
           </div>
         </div>
         <div class="GameContent">
-          <p>{{game.text}}</p>
+          <p>{{game.description}}</p>
           <button [id]="game.id" class="AddToLibraryBtn" (click)="addToLibrary($event)">Add to Library</button>
         </div>
       </div>
