added unit testing for users part and for navigation

--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -5,9 +5,9 @@
   <p class="nav-element" routerLink="/friends">Friends</p>
   <p class="nav-element" routerLink="/profile">Profile</p>
   <div class="right" *ngIf="loggedIn;">
-    <p class="nav-element" routerLink="/login">Login</p>
+    <p class="nav-element" routerLink="/login" id = "logIn">Login</p>
   </div>
   <div class="right" *ngIf="!loggedIn;">
-    <p class="nav-element" routerLink="/login" (click)="logOut()">Logout</p>
+    <p class="nav-element" routerLink="/login" (click)="logOut()" id = "logOut">Logout</p>
   </div>
 </nav>
