--- a/src/app/navigation/navigation.component.scss
+++ b/src/app/navigation/navigation.component.scss
@@ -11,9 +11,11 @@ nav {
 
   background: #FFFFFF;
   box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
-  img{
+
+  img {
     width: 56px;
   }
+
   .nav-element {
     width: 58px;
     height: 30px;
@@ -25,12 +27,14 @@ nav {
     margin: 0 20px;
 
   }
+
   .right {
     width: inherit;
     text-align: right;
     padding-right: 30px;
     box-sizing: border-box;
-    p{
+
+    p {
       background: -webkit-linear-gradient(purple, red);
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
@@ -39,8 +43,33 @@ nav {
       font-size: 26px;
     }
   }
-  .nav-element:hover{
+
+  .nav-element:hover {
     color: #6C69FF;
     cursor: pointer;
   }
+}
+
+@media screen and (max-width: 615px) {
+  nav {
+    img {
+      display: none;
+    }
+
+    .nav-element {
+      font-size: 16px;
+      width: 38px;
+      overflow-x: visible;
+
+    }
+    .right{
+      width: auto;
+      padding: 0;
+      p{
+        font-size: 20px;
+        margin: 0;
+      }
+    }
+  }
+
 }
